--- a/code/springcloud-learn/springcloud-book-parent/pom.xml
+++ b/code/springcloud-learn/springcloud-book-parent/pom.xml
@@ -57,6 +57,13 @@
                 <version>${spring.cloud.version}</version>
             </dependency>
 
+            <!-- 引入Spring Cloud Alibaba 下载仓库 -->
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba</artifactId>
+                <version>2.2.6.RELEASE</version>
+            </dependency>
+
             <!-- test -->
             <dependency>
                 <groupId>org.hamcrest</groupId>
